--- a/python/ai/hands_on_machine_learning/chapter_12.ipynb
+++ b/python/ai/hands_on_machine_learning/chapter_12.ipynb
@@ -1,25 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### __11. 심층 신경망 훈련하기__\n",
-    "\n",
-    "__11.1 그레이디언트 소실(vanishing gradient)과 폭주(exploding gradient)__\n",
-    "\n",
-    "역전파 알고리즘은 출력층에서 입력층으로 오차 그레이디언트를 전파하면서 진행된다. <br>\n",
-    "알고리즘이 신경망의 모든 파라미터에 대한 오차 함수의 그레이디언트를 계산하면, <br>\n",
-    "경사 하강법 단계에서 이 그레이디언트를 사용하여 각 파라미터를 수정한다. <br>\n",
-    "그런데 알고리즘이 하위층으로 진행될수록 그레이디언트가 점점 작아지는 경우가 많다. <br>\n",
-    "경사 하강법이 하위층의 연결 가중치를 변경되지 않은 채로 둔다면 훈련이 수렴하지 않을 것이다. <br>\n",
-    "이를 그레이디언트 소실이라고 한다. 반대로 그레이디언트가 점점 커져서 여러 층이 비정상적으로 <br>\n",
-    "큰 가중치로 갱신되면 알고리즘은 발산하고, 이를 그레이디언트 폭주라고 한다."
+    "#### __12. 텐서플로를 사용한 사용자 정의 모델과 훈련__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,6 +825,471 @@
     "\n",
     "model.fit(X_train_scaled, y_train, epochs=2,\n",
     "          validation_data=(X_valid_scaled, y_valid))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keras.backend.clear_session()\n",
+    "np.random.seed(42)\n",
+    "tf.random.set_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 활성화 함수, 초기화, 규제, 제한을 커스터마이징하기\n",
+    "\n",
+    "# keras.activations.softplus(), tf.nn.softplus()와 동일\n",
+    "def my_softplus(z):\n",
+    "    return tf.math.log(tf.exp(z) + 1.0)\n",
+    "\n",
+    "# keras.initializers.glorot_normal()와 동일\n",
+    "def my_glorot_initializer(shape, dtype=tf.float32):\n",
+    "    stddev = tf.sqrt(2. / (shape[0] + shape[1]))\n",
+    "    return tf.random.normal(shape, stddev=stddev, dtype=dtype)\n",
+    "\n",
+    "# keras.regularizers.l1(0.01)와 동일\n",
+    "def my_l1_regularizer(weights):\n",
+    "    return tf.reduce_sum(tf.abs(0.01 * weights))\n",
+    "\n",
+    "# keras.constraints.nonneg(), tf.nn.relu()와 동일\n",
+    "def my_positive_weights(weights):\n",
+    "    return tf.where(weights < 0., tf.zeros_like(weights), weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer = keras.layers.Dense(30, activation=my_softplus,\n",
+    "                           kernel_initializer=my_glorot_initializer,\n",
+    "                           kernel_regularizer=my_l1_regularizer,\n",
+    "                           kernel_constraint=my_positive_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# factor 하이퍼파라미터를 저장하는 l1규제를 위한 클래스의 예\n",
+    "class MyL1Regularizer(keras.regularizers.Regularizer):\n",
+    "    def __init__(self, factor):\n",
+    "        self.factor = factor\n",
+    "    def __call__(self, weights):\n",
+    "        return tf.reduce_sum(tf.abs(self.factor * weights))\n",
+    "    def get_config(self):\n",
+    "        return {\"factor\": self.factor}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = keras.models.Sequential([\n",
+    "    keras.layers.Dense(30, activation=\"selu\", kernel_initializer=\"lecun_normal\",\n",
+    "                       input_shape=input_shape),\n",
+    "    keras.layers.Dense(1, activation=my_softplus,\n",
+    "                       kernel_regularizer=MyL1Regularizer(0.01),\n",
+    "                       kernel_constraint=my_positive_weights,\n",
+    "                       kernel_initializer=my_glorot_initializer),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=0.8>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 사용자 정의 지표\n",
+    "precision = keras.metrics.Precision()\n",
+    "precision([0, 1, 1, 1, 0, 1, 0, 1], [1, 1, 0, 1, 0, 1, 0, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=0.5>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision([0, 1, 0, 0, 1, 0, 1, 1], [1, 0, 1, 1, 0, 0, 0, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=0.5>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision.result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Variable 'true_positives:0' shape=(1,) dtype=float32, numpy=array([4.], dtype=float32)>,\n",
+       " <tf.Variable 'false_positives:0' shape=(1,) dtype=float32, numpy=array([4.], dtype=float32)>]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision.variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precision.reset_states()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 스트리밍 지표 만들기\n",
+    "class HuberMetric(keras.metrics.Metric):\n",
+    "    def __init__(self, threshold=1.0, **kwrags):\n",
+    "        super().__init__(**kwrags)\n",
+    "        self.threshold = threshold\n",
+    "        self.huber_fn = create_huber(threshold)\n",
+    "        self.total = self.add_weight(\"total\", initializer=\"zeros\")\n",
+    "        self.count = self.add_weight(\"count\", initializer=\"zeros\")\n",
+    "    def update_state(self, y_true, y_pred, sample_weight=None):\n",
+    "        metric = self.huber_fn(y_true, y_pred)\n",
+    "        self.total.assgin_add(tf.reduce_sum(metric))\n",
+    "        self.count.assign_add(tf.cast(tf.size(y_true), tf.float32))\n",
+    "    def result(self):\n",
+    "        return self.total / self.count\n",
+    "    def get_config(self):\n",
+    "        base_config = super().get_config()\n",
+    "        return {**base_config, \"threshold\": self.threshold}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3,), dtype=float32, numpy=array([0.36787948, 1.        , 2.7182817 ], dtype=float32)>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 사용자 정의 층\n",
+    "exponential_layer = keras.layers.Lambda(lambda x: tf.exp(x))\n",
+    "exponential_layer([-1., 0., 1.])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyDense(keras.layers.Layer):\n",
+    "    def __init__(self, units, activation=None, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.units = units\n",
+    "        self.activation = keras.activation.get(activation)\n",
+    "\n",
+    "    def build(self, batch_input_shape):\n",
+    "        self.kernel = self.add_weight(\n",
+    "            name=\"kernel\", shape=[batch_input_shape[-1], self.units],\n",
+    "            initializer=\"glorot_normal\")\n",
+    "        self.bias = self.add_weight(\n",
+    "            name=\"bias\", shape=[self.units], intiailizers=\"zeros\")\n",
+    "        super().build(batch_input_shape)\n",
+    "\n",
+    "    def call(self, X):\n",
+    "        return self.activation(X @ self.kernel + self.bias)\n",
+    "\n",
+    "    def compute_output_shape(self, batch_input_shape):\n",
+    "        return tf.TensorShape(batch_input_shape.as_list()[:-1] + [self.units])\n",
+    "\n",
+    "    def get_config(self):\n",
+    "        base_config = super().get_config()\n",
+    "        return {**base_config, \"units\": self.units,\n",
+    "                \"activation\": keras.activations.serialize(self.activation)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 사용자 정의 모델\n",
+    "class ResidualBlock(keras.layers.Layer):\n",
+    "    def __init__(self, n_layers, n_neurons, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.hidden = [keras.layers.Dense(n_neurons, activation=\"elu\",\n",
+    "                                          kernel_initializer=\"he_normal\")\n",
+    "                       for _ in range(n_layers)]\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        Z = inputs\n",
+    "        for layer in self.hidden:\n",
+    "            Z = layer(Z)\n",
+    "        return inputs + Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 서브클래싱 API를 사용해 모델 정의\n",
+    "class ResidualRegressor(keras.models.Model):\n",
+    "    def __init__(self, output_dim, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.hidden1 = keras.layers.Dense(30, activation=\"elu\",\n",
+    "                                          kernel_initializer=\"he_normal\")\n",
+    "        self.block1 = ResidualBlock(2, 30)\n",
+    "        self.block2 = ResidualBlock(2, 30)\n",
+    "        self.out = keras.layers.Dense(output_dim)\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        Z = self.hidden1(inputs)\n",
+    "        for _ in range(1 + 3):\n",
+    "            Z = self.block1(Z)\n",
+    "        Z = self.block2(Z)\n",
+    "        return self.out(Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 모델 구성 요소에 기반한 손실과 지표\n",
+    "class ReconstructingRegressor(keras.Model):\n",
+    "    def __init__(self, output_dim, **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.hidden = [keras.layers.Dense(30, activation=\"selu\",\n",
+    "                                          kernel_initializer=\"lecun_normal\")\n",
+    "                       for _ in range(5)]\n",
+    "        self.out = keras.layers.Dense(output_dim)\n",
+    "        self.reconstruct = keras.layers.Dense(8)\n",
+    "        self.reconstruction_mean = keras.metrics.Mean(name=\"reconstruction_error\")\n",
+    "\n",
+    "    def call(self, inputs, training=None):\n",
+    "        Z = inputs\n",
+    "        for layer in self.hidden:\n",
+    "            Z = layer(Z)\n",
+    "        reconstruction = self.reconstruct(Z)\n",
+    "        self.recon_loss = 0.05 * tf.reduce_mean(tf.square(reconstruction - onputs))\n",
+    "\n",
+    "        if training:\n",
+    "            result = self.reconstruction_mean(recon_loss)\n",
+    "            self.add_metric(result)\n",
+    "        return self.out(Z)\n",
+    "    \n",
+    "    def train_step(self, data):\n",
+    "        x, y = data\n",
+    "\n",
+    "        with tf.GradientTape() as tape:\n",
+    "            y_pred = self(x)\n",
+    "            loss = self.compiled_loss(y, y_pred, regularization_losses=[self.recon_loss])\n",
+    "\n",
+    "        gradients = tape.gradient(loss, self.trainable_variables)\n",
+    "        self.optimizer.apply_gradients(zip(gradients, self.trainable_variables))\n",
+    "\n",
+    "        return {m.name: m.result() for m in self.metrics}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 자동 미분을 사용하여 그레이디언트 계산하기\n",
+    "def f(w1, w2):\n",
+    "    return 3 * w1 ** 2 + 2 * w1 * w2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.000003007075065"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w1, w2 = 5, 3\n",
+    "eps = 1e-6\n",
+    "(f(w1 + eps, w2) - f(w1, w2)) / eps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.000000003174137"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(f(w1, w2 + eps) - f(w1, w2)) / eps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w1, w2 = tf.Variable(5.), tf.Variable(3.)\n",
+    "with tf.GradientTape() as tape:\n",
+    "    z = f(w1, w2)\n",
+    "\n",
+    "gradients = tape.gradient(z, [w1, w2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=float32, numpy=36.0>,\n",
+       " <tf.Tensor: shape=(), dtype=float32, numpy=10.0>]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A non-persistent GradientTape can only be used to compute one set of gradients (or jacobians)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.GradientTape() as tape:\n",
+    "    z = f(w1 ,w2)\n",
+    "\n",
+    "dz_dw1 = tape.gradient(z, w1)\n",
+    "try:\n",
+    "    dz_dw2 = tape.gradient(z, w2)\n",
+    "except RuntimeError as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gradient() 메서드를 한 번 이상 호출해야 한다면 지속 가능한 테이프를 만들고 사용 끝난 후 삭제\n",
+    "with tf.GradientTape(persistent=True) as tape:\n",
+    "    z = f(w1 ,w2)\n",
+    "\n",
+    "dz_dw1 = tape.gradient(z, w1)\n",
+    "dz_dw2 = tape.gradient(z, w2)\n",
+    "del tape"
    ]
   }
  ],
