--- a/python/ai/hands_on_machine_learning/chapter_02.ipynb
+++ b/python/ai/hands_on_machine_learning/chapter_02.ipynb
@@ -11,7 +11,7 @@
     "import urllib\n",
     "\n",
     "DOWNLOAD_ROOT = \"https://raw.githubusercontent.com/ageron/handson-ml2/master/\"\n",
-    "HOUSING_PATH = os.path.join(\"dataset\", \"housing\")\n",
+    "HOUSING_PATH = os.path.join(\"datasets\", \"housing\")\n",
     "HOUSING_URL = DOWNLOAD_ROOT + \"datasets/housing/housing.tgz\"\n",
     "\n",
     "def fetch_housing_data(housing_url=HOUSING_URL, housing_path=HOUSING_PATH):\n",
