[Add] skill_up/chapter_05.ipynb

--- a/python/etc/skill_up/chapter_04.ipynb
+++ b/python/etc/skill_up/chapter_04.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### __03. 지름킬, 커맨드 라인, 그리고 패키지__"
+    "#### __04. 지름킬, 커맨드 라인, 그리고 패키지__"
    ]
   },
   {
